Colaboratory를 통해 생성됨

--- a/Trans_ColName.ipynb
+++ b/Trans_ColName.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNmHmisB92prIAMsPWX+MLi",
+      "authorship_tag": "ABX9TyPjvmo8PgwnoE4Yrh55mH3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "6754cce4-45b5-43e9-a1d9-e20ded09659d"
+        "outputId": "1d667dcd-4fc7-46d6-9a28-527b164503eb"
       },
       "source": [
         "from google.colab import auth\n",
@@ -68,7 +68,7 @@
         "team_pitcher = pd.read_csv(PATH+\"1차_최종_팀투수.csv\", encoding=\"CP949\")\n",
         "team_hitter = pd.read_csv(PATH+\"1차_최종_팀타자.csv\")\n",
         "per_pitcher = pd.read_csv(PATH+\"1차_최종_개인투수.csv\")\n",
-        "per_hitter = pd.read_csv(PATH+\"1차_최종_개인투수.csv\")\n",
+        "per_hitter = pd.read_csv(PATH+\"1차_최종_개인타자.csv\")\n",
         "team_pitcher_r = pd.read_csv(PATH+\"1차_최종_최근_팀투수.csv\")\n",
         "team_hitter_r = pd.read_csv(PATH+\"1차_최종_최근_팀타자.csv\")\n",
         "team_pitcher_vs = pd.read_csv(PATH+\"1차_최종_상대_팀투수.csv\")\n",
@@ -87,7 +87,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 178
         },
-        "outputId": "76808c68-baf6-4de6-9f45-9952e28e96f3"
+        "outputId": "150bae88-cd8e-4884-b1cd-fee16c11821d"
       },
       "source": [
         "team_pitcher.columns"
@@ -111,7 +111,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 30
         }
       ]
     },
@@ -124,7 +124,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 142
         },
-        "outputId": "56e3a3b2-445a-47de-e9f2-ba0a77e25586"
+        "outputId": "3bba78a6-1e5c-4cb4-cceb-cc4accadf98f"
       },
       "source": [
         "team_hitter.columns"
@@ -146,7 +146,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 31
         }
       ]
     },
@@ -159,7 +159,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 178
         },
-        "outputId": "71b52413-be90-410b-df56-69fef275ad6a"
+        "outputId": "fc0426c2-dac6-4417-9a8d-c4c3850dfd48"
       },
       "source": [
         "per_pitcher.columns"
@@ -183,7 +183,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 32
         }
       ]
     },
@@ -194,9 +194,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 160
         },
-        "outputId": "bf01888d-d7d7-4f23-fda6-e5cbf904c976"
+        "outputId": "8e967ce1-8e36-41d5-eb5f-348e921dea3f"
       },
       "source": [
         "per_hitter.columns"
@@ -207,20 +207,19 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Index(['게임키', '일자', '팀코드', '상대팀코드', '더블헤더코드', '초말', '선수코드', '선발', '구원', '완투',\n",
-              "       '종료', '결과', '홀드', '이닝*3', '투구수', '타자', '타수', '안타', '2루타', '3루타', '홈런',\n",
-              "       '도루', '도루실패', '희타', '희비', '4구', '고4', '사구', '삼진', '병살', '폭투', '보크',\n",
-              "       '실책', '실점', '자책점', '득점권WHIP', '2점차이하WHIP', '345번타자WHIP', '시즌', '평균자책점',\n",
-              "       'RA/9', 'ERC', 'FIP', 'kwERA', 'LOB', 'HR%', 'K%', 'perBB%', 'K9',\n",
-              "       'BB9', 'HR9', 'KBB', 'whip', 'P/G', 'P/IP', 'P/PA', 'PFR', 'CYP', 'F-E',\n",
-              "       'R-E', '연봉', 'OAVG', 'OOBP', 'OSLG', 'OOPS'],\n",
+              "Index(['게임키', '일자', '팀코드', '상대팀코드', '더블헤더코드', '초말', '선수코드', '선발', '타순', '타자',\n",
+              "       '타수', '타점', '득점', '안타', '2루타', '3루타', '홈런', '도루', '도루실패', '희타', '희비',\n",
+              "       '4구', '고4', '사구', '삼진', '병살타', '실책', '잔루', '득점권타율', '득점권타수', '득점권안타',\n",
+              "       '시즌', '단타', 'OBP', 'SLG', 'OPS', 'GPA', '타율', 'BABIP', 'ISO', 'HR%',\n",
+              "       'K%', 'BB%', 'BB/K', 'wOBA', 'wRAA', 'wRC', 'RC', 'XR', 'RC27', 'SPD',\n",
+              "       'SECA', 'PSN', '연봉'],\n",
               "      dtype='object')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 78
+          "execution_count": 33
         }
       ]
     },
@@ -233,7 +232,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 178
         },
-        "outputId": "432ce85d-1410-4285-9325-176acc141f33"
+        "outputId": "5b3f3a94-aeb2-4c1f-ac1c-f2cf41b016a7"
       },
       "source": [
         "team_pitcher_r.columns"
@@ -257,7 +256,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 34
         }
       ]
     },
@@ -270,7 +269,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 160
         },
-        "outputId": "d9ad3077-b28c-4142-c33c-a93a4fb0baa5"
+        "outputId": "8ded47ca-79ee-4f22-d0a6-b9d12c270bbb"
       },
       "source": [
         "team_hitter_r.columns"
@@ -293,7 +292,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 35
         }
       ]
     },
@@ -306,7 +305,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 178
         },
-        "outputId": "cda4a2df-dfd0-4687-9706-33e5e846a48d"
+        "outputId": "79fe78a0-03e8-4479-f732-dbf5345179a4"
       },
       "source": [
         "team_pitcher_vs.columns"
@@ -330,7 +329,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 36
         }
       ]
     },
@@ -343,7 +342,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 160
         },
-        "outputId": "6f40670f-353e-4b04-8260-da14e684cf5a"
+        "outputId": "e5cba248-8154-4b5a-8a6d-c30fde016130"
       },
       "source": [
         "team_hitter_vs.columns"
@@ -366,7 +365,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 37
         }
       ]
     },
@@ -377,9 +376,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 160
+          "height": 140
         },
-        "outputId": "389be5e3-656b-4c50-d080-216e72332527"
+        "outputId": "ff24e3a6-11ad-432f-a84c-cb4ef58d8f6f"
       },
       "source": [
         "final_common.columns"
@@ -402,7 +401,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 38
         }
       ]
     },
@@ -434,7 +433,7 @@
         "                '상대ISO':\"vs_ISO\", '상대BABIP':\"vs_BABIP\", '상대BBK':\"vs_BBK\",'상대wOBA':\"vs_wOBA\", '상대wRAA':\"vs_wRAA\", '상대wRC':\"vs_wRC\", '상대RC':\"vs_RC\", \n",
         "                '상대RC27':\"vs_RC27\", '상대XR':\"vs_XR\",'상대SPD':\"vs_sPD\", '상대SECA':\"vs_SECA\", '상대PSN':\"vs_PSN\", '경기간간격':\"INTERVAL\", '월':\"MM\",\n",
         "                '실점':\"R\", '우취':\"RAINOUT\", '연장':\"OVERTIME\", '득점':\"RUN\", '총득점':\"tRUN\", '총실점':\"tR\", '평균득점':\"aRUN\", '평균실점':\"aR\", '승수':\"W\",\n",
-        "                '패배수':\"L\", '승률':\"WPCT\",'피타고리안기대승률':\"PE\", '상대총득점':\"vs_tRUN\", '상대총실점':\"vs_tR\", '상대평균득점':\"vs_aRUN\", \n",
+        "                '패배수':\"L\", '승률':\"WPCT\",'피타고리안기대승률':\"PE\", '상대총득점':\"vs_tRUN\", '상대총실점':\"vs_tR\", '상대평균득점':\"vs_aRUN\",\"타순\":\"BAT_ORDER_NO\",\n",
         "                '상대평균실점':\"vs_aR\", '상대승률':\"vs_WPCT\",'상대피타고리안기대승률':\"vs_PE\", '최근총득점':\"r_tRUN\", '최근총실점':\"r_tR\", \"타점\":\"RBI\",\n",
         "                '최근평균득점':\"r_aRUN\", '최근평균실점':\"r_aR\", '최근승률':\"r_WPCT\",'최근피타고리안기대승률':\"r_PE\", '총합연봉':\"tMONEY\", '평균연봉':\"aMONEY\"}"
       ],
@@ -470,7 +469,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 158
         },
-        "outputId": "01e8b40e-87c6-46d8-eb02-3ddf333a84d9"
+        "outputId": "e2c999c8-19e2-4bf4-ef25-480ddb8b8e21"
       },
       "source": [
         "team_pitcher.columns = translate(team_pitcher.columns, abbreviation)\n",
@@ -495,7 +494,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 86
+          "execution_count": 51
         }
       ]
     },
@@ -508,7 +507,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 175
         },
-        "outputId": "72377f18-41eb-4f7b-b14d-e028b434c77e"
+        "outputId": "b3956495-d197-4d6d-eb2c-9a1c9d9e9949"
       },
       "source": [
         "team_pitcher_r.columns = translate(team_pitcher_r.columns, abbreviation)\n",
@@ -534,7 +533,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 87
+          "execution_count": 52
         }
       ]
     },
@@ -547,7 +546,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 175
         },
-        "outputId": "7faa0bd7-8587-45b8-b2a2-3478c2c622aa"
+        "outputId": "4949c3c5-cd2a-4fc7-c918-7c26c0c77eb1"
       },
       "source": [
         "team_pitcher_vs.columns = translate(team_pitcher_vs.columns, abbreviation)\n",
@@ -573,7 +572,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 88
+          "execution_count": 53
         }
       ]
     },
@@ -586,7 +585,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 175
         },
-        "outputId": "0bd811fd-c602-4e36-a09c-9c1cb8f3aa8c"
+        "outputId": "545ca370-201c-4967-fc5d-0be1026f06e4"
       },
       "source": [
         "per_pitcher.columns = translate(per_pitcher.columns, abbreviation)\n",
@@ -612,7 +611,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 89
+          "execution_count": 54
         }
       ]
     },
@@ -625,7 +624,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 140
         },
-        "outputId": "47e596f5-ef15-4094-fc09-8fd89e7c4dd8"
+        "outputId": "5d47944c-0df0-4718-ae4b-bbb49defe36a"
       },
       "source": [
         "team_hitter.columns = translate(team_hitter.columns, abbreviation)\n",
@@ -649,7 +648,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 91
+          "execution_count": 55
         }
       ]
     },
@@ -662,7 +661,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 158
         },
-        "outputId": "26c98209-75fb-4551-80a5-85c4250fc993"
+        "outputId": "f7870953-6236-4b6c-83dd-9b9ffd96a250"
       },
       "source": [
         "team_hitter_r.columns = translate(team_hitter_r.columns, abbreviation)\n",
@@ -687,7 +686,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 92
+          "execution_count": 56
         }
       ]
     },
@@ -700,7 +699,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 158
         },
-        "outputId": "f3603617-a1da-4fa5-c865-d33f842a9645"
+        "outputId": "4804e30d-a7d8-498c-847d-8a609228529a"
       },
       "source": [
         "team_hitter_vs.columns = translate(team_hitter_vs.columns, abbreviation)\n",
@@ -725,7 +724,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 93
+          "execution_count": 57
         }
       ]
     },
@@ -736,9 +735,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 158
         },
-        "outputId": "21fb573e-90a4-45f2-a2ca-5cd23410f334"
+        "outputId": "b9160f5f-b5d7-480c-e42f-7a3a31f72e78"
       },
       "source": [
         "per_hitter.columns = translate(per_hitter.columns,abbreviation)\n",
@@ -751,20 +750,19 @@
           "data": {
             "text/plain": [
               "Index(['G_ID', 'GDAY_DS', 'T_ID', 'VS_T_ID', 'HEADER_NO', 'TB_SC ', 'P_ID',\n",
-              "       'START_CK', 'RELIEF_CK', 'CG_CK', 'QUIT_CK', 'WLS', 'HOLD', 'INN2',\n",
-              "       'BF', 'PA', 'AB', 'HIT', 'H2', 'H3', 'HR', 'SB', 'CS', 'SH', 'SF', 'BB',\n",
-              "       'IB', 'HP', 'KK', '병살', 'WP', 'BK', 'ERR', 'R', 'ER', 'P_WHIP_RT',\n",
-              "       'P2_WHIP_RT', 'CB_WHIP_RT', 'GYEAR', 'ERA', 'RA9', 'ERC', 'FIP',\n",
-              "       'kwERA', 'LOB', 'HR_PCT', 'K_PCT', 'perBB_PCT', 'K9', 'BB9', 'HR9',\n",
-              "       'KBB', 'whip', 'P_G', 'P_IP', 'P_PA', 'PFR', 'CYP', 'F_E', 'R_E',\n",
-              "       'MONEY', 'OAVG', 'OOBP', 'OSLG', 'OOPS'],\n",
+              "       'START_CK', 'BAT_ORDER_NO', 'PA', 'AB', 'RBI', 'RUN', 'HIT', 'H2', 'H3',\n",
+              "       'HR', 'SB', 'CS', 'SH', 'SF', 'BB', 'IB', 'HP', 'KK', 'GD', 'ERR',\n",
+              "       'LOB', 'P_HRA_RT ', 'P_AB_CN', 'P_HIT_CN', 'GYEAR', 'H1', 'OBP', 'SLG',\n",
+              "       'OPS', 'GPA', 'AVG', 'BABIP', 'ISO', 'HR_PCT', 'K_PCT', 'BB_PCT',\n",
+              "       'BB/K', 'wOBA', 'wRAA', 'wRC', 'RC', 'XR', 'RC27', 'SPD', 'SECA', 'PSN',\n",
+              "       'MONEY'],\n",
               "      dtype='object')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 94
+          "execution_count": 58
         }
       ]
     },
@@ -777,7 +775,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 140
         },
-        "outputId": "9ca70c19-70d6-4908-ad63-25b4612c1a8c"
+        "outputId": "cc2a93e3-c2d7-4c1d-a73f-be22f40f555d"
       },
       "source": [
         "final_common.columns = translate(final_common.columns,abbreviation)\n",
@@ -801,7 +799,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 96
+          "execution_count": 59
         }
       ]
     },
@@ -814,7 +812,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 590
         },
-        "outputId": "86d3c5a4-6aeb-497b-e679-1ff3ad476a08"
+        "outputId": "d8965f9b-8d52-4eea-e671-33f2275b85d2"
       },
       "source": [
         "team_hitter"
@@ -1504,7 +1502,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 97
+          "execution_count": 60
         }
       ]
     },
@@ -1526,6 +1524,19 @@
         "per_hitter.to_csv(NEW_PATH+\"개인타자.csv\",index=False)\n",
         "per_pitcher.to_csv(NEW_PATH+\"개인투수.csv\",index=False)\n",
         "final_common.to_csv(NEW_PATH+\"공통.csv\",index=False)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_v4wrZAmPxxm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
